--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,3 +53,76 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.potential-chats {
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.potential-chats .single-user {
+  background: rgb(0, 213, 255);
+  color: white;
+  cursor: pointer;
+  padding: 5px 7px;
+  border-radius: 10px;
+  margin-right: 1rem;
+  position: relative;
+}
+
+.potential-chats .user-online {
+  display: inline-block;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background: rgb(0, 219, 0);
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  z-index: 2;
+}
+
+.chat-box {
+  max-height: calc(100vh-10rem);
+  overflow-y: auto;
+  background-color: rgb(25, 25, 25);
+  border-radius: 10px;
+}
+
+.chat-box .messages {
+  max-height: calc(100vh - 15rem);
+  overflow-y: auto;
+  padding: 0 2rem;
+}
+
+.chat-box .message {
+  color: white;
+  background: #282828;
+  padding: 0.3rem 0.6rem;
+  border-radius: 5px;
+  max-width: 50%;
+}
+
+.chat-box .message.self {
+  background: #00bd9b;
+}
+
+.chat-box .message-footer {
+  font-size: 12px;
+  align-self: flex-end;
+  font-weight: 400;
+}
+
+.chat-input {
+  width: 100%;
+  background: rgb(35, 35, 35);
+  padding: 1rem;
+}
+
+.chat-input .send-btn {
+  background: rgba(72, 112, 233, 1);
+  border: none;
+  color: white;
+  height: 40px;
+  width: 40x;
+  border-radius: 50%;
+}
